--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
         "husky": "^8.0.3",
+        "lint-staged": "15.2.2",
         "onchange": "^7.1.0",
         "prettier": "3.2.5",
         "testcontainers": "^9.12.0",
@@ -72,5 +73,15 @@
     "dependencies": {
         "@babel/parser": "^7.22.5",
         "@babel/traverse": "^7.22.5"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,ejs,cjs}": [
+            "eslint --fix",
+            "git add"
+        ],
+        "*.{html,css,json,yaml}": [
+            "prettier --write",
+            "git add"
+        ]
     }
 }
