--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2214,6 +2214,12 @@ zoho-invoice:
         - invoicing
     alias: zoho
     docs: https://docs.nango.dev/integrations/all/zoho-invoice
+zoho-mail:
+    categories:
+        - productivity
+        - communication
+    alias: zoho
+    docs: https://docs.nango.dev/integrations/all/zoho-mail
 zoho-bigin:
     alias: zoho
     docs: https://docs.nango.dev/integrations/all/zoho-bigin
