--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2219,6 +2219,8 @@ zoho-mail:
         - productivity
         - communication
     alias: zoho
+    proxy:
+        base_url: https://mail.zoho.${connectionConfig.extension}
     docs: https://docs.nango.dev/integrations/all/zoho-mail
 zoho-bigin:
     alias: zoho
