feat(integrations):api support and integration template for zoho-mail (#1779)
## Describe your changes

- Added configuration for zoho-mail in providers.yaml
- Added zoho-mail to docs-v2.
- Added zoho-mail pages for Supported API groups in mint.json.
- Added zoho-mail SVG file in template-logos folder.
- Consolidate zoho-mail docs pages
- Added a sync integration template that fetches all your personal tasks
in Zoho mail

## Test
This provider has been used successfully in local development to connect
to Zoho mail and successfully call those endpoints after authorizing
using Nango.

The documentation update was reviewed using `npm run docs` and verifying
on localhost.

--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -2647,3 +2647,49 @@ integrations:
         Tag: []
         $zia_owner_assignment: string
         $approval_state: string
+  zoho-mail:
+    syncs:
+      zoho-mail-tasks:
+        runs: every 6 hours
+        description: |
+          Fetches a list of all your personal tasks in Zoho mail
+        output: ZohoMailTask
+        sync_type: full
+        endpoint: /zoho-mail/tasks
+        scopes:
+          - ZohoMail.tasks.READ
+    models:
+      ZohoMailTask:
+        id: string
+        serviceType: number
+        modifiedTime: date
+        resourceId: string
+        attachments: []
+        statusStr: string
+        statusValue: number
+        description: string
+        project:
+          name: string
+          id: string
+        isTaskPublished: boolean
+        title: string
+        createdAt: date
+        portalId: number
+        serviceId: string
+        owner:
+          name: string
+          id: number
+        assigneeList: []
+        dependency: []
+        subtasks: []
+        priority: string
+        tags: []
+        followers: []
+        namespaceId: string
+        dependents: []
+        assignee:
+          name: string
+          id: number
+        serviceUniqId: number
+        depUniqId: string
+        status: string
