--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,6 +31,7 @@
         "ajv-errors": "^3.0.0",
         "axios": "^1.2.0",
         "byots": "^5.0.0-dev.20221103.1.34",
+        "chalk": "^5.3.0",
         "chokidar": "^3.5.3",
         "commander": "^10.0.1",
         "conf": "12.0.0",
