--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -27,6 +27,7 @@
         "archiver": "^6.0.1",
         "axios": "^1.3.4",
         "braintree": "^3.15.0",
+        "chalk": "^5.3.0",
         "cors": "^2.8.5",
         "dayjs": "^1.11.7",
         "dd-trace": "5.2.0",
