--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -25,7 +25,7 @@
         "dd-trace": "5.2.0",
         "express": "^4.18.2",
         "superjson": "^2.2.1",
-        "undici": "^6.7.0",
+        "undici": "6.6.2",
         "zod": "^3.22.4"
     },
     "devDependencies": {
