[nan-467] add updatedAfter | updated_after param (#1777)
## Describe your changes

## Issue ticket number and link

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -30,6 +30,7 @@
         "chalk": "^5.3.0",
         "cors": "^2.8.5",
         "dayjs": "^1.11.7",
+        "dayjs-plugin-utc": "^0.1.2",
         "dd-trace": "5.2.0",
         "ejs": "^3.1.5",
         "exponential-backoff": "^3.1.1",
