--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -48,6 +48,8 @@
         "env-cmd": "10.1.0",
         "js-cookie": "3.0.5",
         "ms": "2.1.3",
+        "postcss": "8.4.35",
+        "postcss-loader": "8.1.1",
         "posthog-js": "1.51.4",
         "query-string": "8.1.0",
         "react-code-blocks": "0.0.9-0",
@@ -60,6 +62,7 @@
         "swr": "2.2.5",
         "tailwindcss": "3.2.7",
         "typescript": "4.9.5",
+        "webpack": "5.90.3",
         "web-vitals": "2.1.4",
         "zustand": "4.3.9"
     },
