--- a/docs-v2/spec.yaml
+++ b/docs-v2/spec.yaml
@@ -728,31 +728,19 @@ paths:
                   schema:
                       type: string
                   description: The data model to fetch
-                - name: updated_after
-                  in: query
-                  required: false
-                  schema:
-                      type: string
-                  description: Timestamp, e.g. 2023-05-31T11:46:13.390Z. If passed only records added or updated after this timestamp are returned, otherwise all records are returned.
-                - name: delta
-                  in: query
-                  required: false
-                  schema:
-                      type: string
-                  description: DEPRECATED (use updated_after) Timestamp, e.g. 2023-05-31T11:46:13.390Z. If passed only records added or updated after this timestamp are returned, otherwise all records are returned.
-                - name: limit
-                  in: query
-                  required: false
-                  schema:
-                      type: integer
-                  description: The maximum number of records to return. Defaults to 100.
                 - name: cursor
                   in: query
                   required: false
                   schema:
                       type: string
                   description: |
-                    Base 64 encoded value that can be used to fetch the next page of results. The cursor will be included until there are no more results to paginate through.
+                    Each record from this method comes with a synchronization cursor in `_nango_metadata.cursor`. Save the last fetched record's cursor to track how far you've synced. By providing the cursor to this endpoint, you'll continue syncing from where you left off, receiving only post-cursor changes. This same cursor is used to paginate through the results of this endpoint.
+                - name: limit
+                  in: query
+                  required: false
+                  schema:
+                      type: integer
+                  description: The maximum number of records to return. Defaults to 100.
                 - name: filter
                   in: query
                   required: false
@@ -760,6 +748,18 @@ paths:
                       type: string
                       enum: [added, updated, deleted]
                   description: Filter to only show results that have been added or updated or deleted. Helpful when used in conjuction with the updated_after parameter to retrieve a subset or records that were added, updated, or deleted with the latest sync.
+                - name: updated_after
+                  in: query
+                  required: false
+                  schema:
+                      type: string
+                  description: Timestamp, e.g. 2023-05-31T11:46:13.390Z. If passed only records modified after this timestamp are returned, otherwise all records are returned.
+                - name: delta (deprecated)
+                  in: query
+                  required: false
+                  schema:
+                      type: string
+                  description: DEPRECATED (use updated_after) Timestamp, e.g. 2023-05-31T11:46:13.390Z. If passed, only records modified after this timestamp are returned, otherwise all records are returned.
                 - name: Connection-Id
                   in: header
                   required: true
