--- a/.env.example
+++ b/.env.example
@@ -57,10 +57,13 @@ LOG_LEVEL=info
 #
 ###############################################################################
 
-
 # Configure where integrations will be loaded from
 NANGO_INTEGRATIONS_FULL_PATH=
 
 # Internal Datadog Telemetry
 # This telemetry logs metrics/traces in your own Datadog instance
 NANGO_TELEMETRY_SDK=false
+
+# Getting Started configuration
+DEFAULT_GITHUB_CLIENT_ID=
+DEFAULT_GITHUB_CLIENT_SECRET=
