--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -44,6 +44,7 @@
         "buffer": "6.0.3",
         "class-variance-authority": "0.5.2",
         "classnames": "2.3.2",
+        "clsx": "2.1.0",
         "cron-parser": "4.8.1",
         "env-cmd": "10.1.0",
         "js-cookie": "3.0.5",
@@ -60,6 +61,7 @@
         "react-scripts": "5.0.1",
         "react-toastify": "9.1.1",
         "swr": "2.2.5",
+        "tailwind-merge": "2.2.1",
         "tailwindcss": "3.2.7",
         "typescript": "4.9.5",
         "web-vitals": "2.1.4",
