feat: show debug mode in UI

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -4,6 +4,16 @@
         "rootDir": "lib",
         "outDir": "dist"
     },
-    "references": [{ "path": "../shared" }, { "path": "../node-client" }],
-    "include": ["lib/**/*", "../shared/lib/express.d.ts"]
+    "references": [
+        {
+            "path": "../shared"
+        },
+        {
+            "path": "../node-client"
+        }
+    ],
+    "include": [
+        "lib/**/*",
+        "../shared/lib/express.d.ts",
+    ]
 }
