--- a/integration-templates/google-calendar/nango.yaml
+++ b/integration-templates/google-calendar/nango.yaml
@@ -4,9 +4,7 @@ integrations:
       google-calendar-events:
         description: |
           Sync calendar events on the primary calendar going back one month and
-          save the entire object as specified by the Google API.
-          Details: partial sync, doesn't support deletes, sync goes back one
-          month, metadata is not required.
+          save the entire object as specified by the Google API
         runs: every 5 minutes
         output: GoogleCalendarEvent
         sync_type: incremental
@@ -14,10 +12,7 @@ integrations:
         scopes: https://www.googleapis.com/auth/calendar.readonly
       google-calendars:
         description: |
-          Sync the calendars list of the user.
-          Details: full sync, does support deletes. Sync goes back all time,
-          metadata not required.
-          Required scope(s): https://www.googleapis.com/auth/calendar.readonly
+          Sync the calendars list of the user
         track_deletes: true
         runs: every hour
         output: GoogleCalendar
