--- a/integration-templates/jira/nango.yaml
+++ b/integration-templates/jira/nango.yaml
@@ -3,6 +3,8 @@ integrations:
     syncs:
       jira-issues:
         runs: every 5mins
+        description: |
+          Fetches a list of issues from Jira
         output: JiraIssue
         sync_type: incremental
         endpoint: /jira/issues
