--- a/integration-templates/ashby/nango.yaml
+++ b/integration-templates/ashby/nango.yaml
@@ -1,29 +1,43 @@
 integrations:
   ashby:
-    ashby-candidates:
-      runs: every hour
-      returns:
-        - AshbyCandidate
-      description: |
-        Fetch a list of all candidates from your ashby account.
-        Details: Increamental sync, doesn't track deletes, metadata is required.
-    ashby-jobs:
-      runs: every hour
-      returns:
-        - AshbyJob
-      description: |
-        Fetch a list of all jobs from your ashby account.
-        Details: Increamental sync, doesn't track deletes, metadata is required.
-    ashby-create-application:
-      type: action
-      returns: AshbyCreateApplicationResponse
-      description: |
-        Action to consider a candidate for a job.
-    ashby-create-note:
-      type: action
-      returns: AshbyCreateNoteResponse
-      description: |
-        Action to create a note on a candidate.
+    syncs:
+      ashby-candidates:
+        runs: every hour
+        output: AshbyCandidate
+        description: |
+          Fetches a list of all candidates from your ashby account
+        metadata:
+          description: |
+            Since Ashby doesn't use a lastSyncDate value to increment its sync,
+            we need to store a candidatelastsyncToken which will be used to increment the candidates syncs
+          scopes: candidatelastsyncToken
+        sync_type: incremental
+        endpoint: /ashby/candidates
+      ashby-jobs:
+        runs: every hour
+        output: AshbyJob
+        description: |
+          Fetches a list of all jobs from your ashby account
+        metadata:
+          description: |
+            Since Ashby doesn't use a lastSyncDate value to increment its sync,
+            we need to store a jobslastsyncToken which will be used to increment the jobs syncs
+          scopes: jobslastsyncToken
+        sync_type: incremental
+        endpoint: /ashby/jobs
+    actions:
+      ashby-create-application:
+        output: AshbyCreateApplicationResponse
+        input: AshbyCreateCandidateInput
+        description: |
+          Action to consider a candidate for a job
+        endpoint: POST /ashby/create-application
+      ashby-create-note:
+        output: AshbyCreateNoteResponse
+        input: AshbyCreateNoteInput
+        description: |
+          Action to create a note on a candidate.
+        endpoint: POST /ashby/create-note
 models:
   AshbyCandidate:
     id: string
@@ -154,3 +168,17 @@ models:
       firstName: string
       lastName: string
       email: string
+  AshbyCreateCandidateInput:
+    candidateId: string
+    jobId: string
+    interviewPlanId: string | undefined
+    interviewStageId: string | undefined
+    sourceId: string | undefined
+    creditedToUserId: string | undefined
+  AshbyCreateNoteInput:
+    candidateId: string
+    note: string | NoteObject
+    sendNotifications: boolean | undefined
+  NoteObject:
+    value: string
+    type: string
