--- a/integration-templates/bamboohr-basic/nango.yaml
+++ b/integration-templates/bamboohr-basic/nango.yaml
@@ -4,19 +4,17 @@ integrations:
       bamboohr-employees:
         runs: every 6 hours
         description: |
-          Fetches employees from bamboohr.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of current employees from bamboohr
         output: BamboohrEmployee
         sync_type: incremental
         endpoint: /bamboohr/employees
-        scopes:
-          - default
     actions:
       bamboohr-create-employee:
         description: |
-          Action to create a new employee.
+          Action to create a new employee
         output: BamboohrCreateEmployeeResponse
-        endpoint: /bamboohr/create-employee
+        input: BamboohrEmployee
+        endpoint: POST /bamboohr/create-employee
 models:
   BamboohrEmployee:
     id: string
