--- a/integration-templates/greenhouse-basic/nango.yaml
+++ b/integration-templates/greenhouse-basic/nango.yaml
@@ -4,36 +4,24 @@ integrations:
       greenhouse-applications:
         runs: every 6 hours
         description: |
-          Fetches all organization's applications from greenhouse.
-          Details: incremental sync, doesn't track deletes, metadata is not
-          required.
+          Fetches a list of all organization's applications from greenhouse
         output: GreenhouseApplication
         sync_type: incremental
         endpoint: /greenhouse-basic/applications
-        scopes:
-          - default
       greenhouse-candidates:
         runs: every 6 hours
         description: |
-          Fetches all organization's candidates from greenhouse.
-          Details: incremental sync, doesn't track deletes, metadata is not
-          required.
+          Fetches a list of all organization's candidates from greenhouse
         output: GreenhouseCandidate
         sync_type: incremental
         endpoint: /greenhouse-basic/candidates
-        scopes:
-          - default
       greenhouse-jobs:
         runs: every 6 hours
         description: |
-          Fetches all organization's jobs from greenhouse.
-          Details: incremental sync, doesn't track deletes, metadata is not
-          required.
+          Fetches a list of all organization's jobs from greenhouse
         output: GreenhouseJob
         sync_type: incremental
         endpoint: /greenhouse-basic/jobs
-        scopes:
-          - default
 models:
   GreenhouseApplication:
     id: string
