--- a/integration-templates/lever/nango.yaml
+++ b/integration-templates/lever/nango.yaml
@@ -1,19 +1,27 @@
 integrations:
   lever-basic:
     actions:
+      lever-create-note:
+        description: |
+          Action to create a note and add it to a candidate profile in Lever
+        output: LeverOpportunityNote
+        input: LeverCreateNoteInput
+        endpoint: POST /lever/create-note
+        scopes:
+          - notes:write:admin
       lever-create-opportunity:
         description: |
-          Create candidates and opportunities in your Lever account.
+          Action to create candidates and opportunities in Lever
         output: LeverOpportunity
-        endpoint: /lever/create-opportunity
-        scopes: opportunities:write:admin
+        input: LeverCreateOpportunityInput
+        endpoint: POST /lever/create-opportunity
+        scopes:
+          - opportunities:write:admin
     syncs:
       lever-opportunities:
         runs: every 6 hours
         description: |
-          Fetch all pipeline Opportunities for Contacts in your Lever account.
-          Details: incremental sync, doesn't track deletes, metadata is not
-          required.
+          Fetches a list of all pipeline opportunities for contacts in Lever
         output: LeverOpportunity
         sync_type: incremental
         endpoint: /lever/opportunities
@@ -22,8 +30,7 @@ integrations:
       lever-opportunities-applications:
         runs: every 6 hours
         description: |
-          Fetch all applications for a candidate in your lever account.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of all applications for a candidate in Lever
         output: LeverOpportunityApplication
         sync_type: full
         endpoint: /lever/opportunities-applications
@@ -32,9 +39,7 @@ integrations:
       lever-opportunities-feedbacks:
         runs: every 6 hours
         description: |
-          Fetch all feedback forms for a candidate for a specific Opportunity in
-          lever.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of all feedback forms for a candidate for a specific Opportunity in lever
         output: LeverOpportunityFeedback
         sync_type: full
         endpoint: /lever/opportunities-feedbacks
@@ -43,8 +48,7 @@ integrations:
       lever-opportunities-interviews:
         runs: every 6 hours
         description: |
-          Fetch all interviewers for a specific Opportunity in lever.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of all interviewers for a specific Opportunity in lever
         output: LeverOpportunityInterview
         sync_type: full
         endpoint: /lever/opportunities-interviews
@@ -53,8 +57,7 @@ integrations:
       lever-opportunities-notes:
         runs: every 6 hours
         description: |
-          Fetch all notes for a specific candidate in lever.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of all notes for a specific candidate in lever
         output: LeverOpportunityNote
         sync_type: full
         endpoint: /lever/opportunities-notes
@@ -63,7 +66,7 @@ integrations:
       lever-opportunities-offers:
         runs: every 6 hours
         description: |
-          Fetch all offers for a specific candidate in lever.
+          Fetches a list of all offers for a specific candidate in lever.
         output: LeverOpportunityOffer
         sync_type: full
         endpoint: /lever/opportunities-offers
@@ -72,8 +75,7 @@ integrations:
       lever-postings:
         runs: every 6 hours
         description: |
-          Fetch all postings in your Lever account.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of all postings in Lever
         output: LeverPosting
         sync_type: full
         endpoint: /lever/postings
@@ -82,11 +84,8 @@ integrations:
       lever-postings-apply:
         runs: every 6 hours
         description: |
-          Fetch all questions included in a posting’s application form in your
-          Lever account.
-          Details: full sync, doesn't track deletes, metadata is not required.
-          Scope(s):
-        output: L
+          Fetches a list of all questions included in a posting’s application form in Lever
+        output: LeverPostingApply
         sync_type: full
         endpoint: /lever/postings-apply
         scopes:
@@ -94,8 +93,7 @@ integrations:
       lever-stage:
         runs: every 6 hours
         description: |
-          Fetch all pipeline stages in your Lever account.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of all pipeline stages in Lever
         output: LeverStage
         sync_type: full
         endpoint: /lever/stage
@@ -273,3 +271,38 @@ models:
   LeverStage:
     id: string
     text: string
+  LeverCreateNoteInput:
+    opportunityId: string
+    perform_as: string | undefined
+    note_id: string | undefined
+    value: string | undefined
+    secret: boolean | undefined
+    score: number | undefined
+    notifyFollowers: boolean | undefined
+    createdAt: number | undefined
+  PhoneEntry:
+    value: string | undefined
+    type: string | undefined
+  ArchievedEntry:
+    archivedAt: number | undefined
+    reason: string | undefined
+  LeverCreateOpportunityInput:
+    perform_as: string
+    parse: boolean | undefined
+    perform_as_posting_owner: boolean | undefined
+    name: string | undefined
+    headline: string | undefined
+    stage: string | undefined
+    location: string | undefined
+    phones: PhoneEntry[] | undefined
+    emails: string | undefined
+    links: string[] | undefined
+    tags: string[] | undefined
+    sources: string[] | undefined
+    origin: string | undefined
+    owner: string | undefined
+    followers: string[] | undefined
+    postings: string[] | undefined
+    createdAt: number | undefined
+    archived: ArchievedEntry | undefined
+    contact: string[] | undefined
