--- a/integration-templates/pipedrive/nango.yaml
+++ b/integration-templates/pipedrive/nango.yaml
@@ -4,8 +4,7 @@ integrations:
       pipedrive-activities:
         runs: every hour
         description: |
-          Fetches activities from pipedrive.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of activities from pipedrive
         output: PipeDriveActivity
         sync_type: incremental
         endpoint: /pipedrive/activities
@@ -14,8 +13,7 @@ integrations:
       pipedrive-deals:
         runs: every hour
         description: |
-          Fetches deals from pipedrive.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of deals from pipedrive
         output: PipeDriveDeal
         sync_type: incremental
         endpoint: /pipedrive/deals
@@ -24,8 +22,7 @@ integrations:
       pipedrive-organizations:
         runs: every hour
         description: |
-          Fetches organizations from pipedrive.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of organizations from pipedrive
         output: PipeDriveOrganization
         sync_type: incremental
         endpoint: /pipedrive/organizations
@@ -34,8 +31,7 @@ integrations:
       pipedrive-persons:
         runs: every half hour
         description: |
-          Fetches persons from pipedrive.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches persons from pipedrive
         output: PipeDrivePerson
         sync_type: incremental
         endpoint: /pipedrive/persons
