--- a/integration-templates/wildix-pbx/nango.yaml
+++ b/integration-templates/wildix-pbx/nango.yaml
@@ -3,6 +3,8 @@ integrations:
     syncs:
       wildix-pbx-colleagues:
         runs: every 1 hour
+        description: |
+          Fetches a list of users from PBX
         output: WildixPbxColleague
         sync_type: full
         endpoint: /wildix-pbx/colleagues
