--- a/integration-templates/workable/nango.yaml
+++ b/integration-templates/workable/nango.yaml
@@ -4,9 +4,7 @@ integrations:
       workable-candidates:
         runs: every 6 hours
         description: |
-          Fetches candidates from workable.
-          Details: incremental sync, doesn't track deletes, metadata is not
-          required.
+          Fetches a list of candidates from workable
         output: WorkableCandidate
         sync_type: incremental
         endpoint: /workable/candidates
@@ -15,8 +13,7 @@ integrations:
       workable-candidates-activities:
         runs: every 6 hours
         description: |
-          Fetches activity stream of the given candidate
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of activity streams of the given candidate
         output: WorkableCandidateActivity
         sync_type: full
         endpoint: /workable/candidates-activities
@@ -25,8 +22,7 @@ integrations:
       workable-candidates-offer:
         runs: every 6 hours
         description: |
-          Fetches candidate's latest offer from workable.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches candidate's latest offer from workable
         output: WorkableCandidateOffer
         sync_type: full
         endpoint: /workable/candidates-offer
@@ -35,9 +31,7 @@ integrations:
       workable-jobs:
         runs: every 6 hours
         description: |
-          Fetches jobs from workable.
-          Details: incremental sync, doesn't track deletes, metadata is not
-          required.
+          Fetches a list of jobs from workable
         output: WorkableJob
         sync_type: incremental
         endpoint: /workable/jobs
@@ -46,8 +40,7 @@ integrations:
       workable-jobs-candidates:
         runs: every 6 hours
         description: |
-          Fetches candidates for the specified job from workable.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of candidates for the specified job from workable
         output: WorkableJobsCandidate
         sync_type: full
         endpoint: /workable/jobs-candidates
@@ -56,8 +49,7 @@ integrations:
       workable-jobs-questions:
         runs: every 6 hours
         description: |
-          Fetches questions for the specified job from workable.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of questions for the specified job from workable
         output: WorkableJobQuestion
         sync_type: full
         endpoint: /workable/jobs-questions
@@ -66,20 +58,28 @@ integrations:
       workable-members:
         runs: every 6 hours
         description: |
-          Fetches account members from workable.
-          Details: full sync, doesn't track deletes, metadata is not required.
+          Fetches a list of account members from workable
         output: WorkableMember
         sync_type: full
         endpoint: /workable/members
         scopes:
           - r_jobs
     actions:
+      workable-create-candidate:
+        description: |
+          Action to create a candidate at the specified job
+        scopes:
+          - w_candidates
+        output: WorkableCreateCandidateResponse
+        input: WorkableCreateCandidateInput
+        endpoint: POST /workable/create-candidate
       workable-create-comment:
         description: |
-          Action to create a comment on the applicant's timeline.
-          Scope(s): w_candidates or w_comments
+          Action to create a comment on the applicant's timeline
+        scopes:
+          - w_candidates or w_comments
         output: WorkableCreateCommentResponse
-        endpoint: /workable/create-comment
+        endpoint: POST /workable/create-comment
 models:
   WorkableCandidate:
     id: string
@@ -197,3 +197,65 @@ models:
         zip_code: string
   WorkableCreateCommentResponse:
     id: string
+  WorkableCreateCandidateInput:
+    shortcode: string
+    candidate:
+      name: string
+      firstname: string
+      lastname: string
+      email: string
+      headline: string | undefined
+      summary: string | undefined
+      address: string | undefined
+      phone: string | undefined
+      cover_letter: string | undefined
+      education_entries: EducationEntry[] | undefined
+      experience_entries: ExperienceEntry[] | undefined
+      answers: Answer[] | undefined
+      skills: string[] | undefined
+      tags: string[] | undefined
+      disqualified: boolean | undefined
+      disqualification_reason: string | undefined
+      disqualified_at: string | undefined
+      social_profiles: SocialProfile[] | undefined
+    domain: string | undefined
+    recruiter_key: string | undefined
+  EducationEntry:
+    school: string
+    degree: string | undefined
+    field_of_study: string | undefined
+    start_date: string | undefined
+    end_date: string | undefined
+  ExperienceEntry:
+    title: string
+    summary: string | undefined
+    start_date: string | undefined
+    end_date: string | undefined
+    current: boolean | undefined
+    company: string | undefined
+    industry: string | undefined
+  Answer:
+    question_key: string
+    body: string | undefined
+    choices: string[]
+    checked: boolean | undefined
+    date: string | undefined
+    number: number | undefined
+    file:
+      name: string
+      data: string
+  SocialProfile:
+    type: string
+    name: string | undefined
+    username: string | undefined
+    url: string
+  WorkableCreateCommentInput:
+    id: string
+    member_id: string
+    comment:
+      body: string
+      policy: string[] | undefined
+      attachment: Attachment | undefined
+  Attachment:
+    name: string
+    data: string
