--- a/integration-templates/zoho-crm/nango.yaml
+++ b/integration-templates/zoho-crm/nango.yaml
@@ -5,9 +5,7 @@ integrations:
         runs: every half hour
         auto_start: false
         description: |
-          Fetches accounts from zoho crm.
-          Details: full sync, doesn't track deletes, metadata is not required.
-          Scope(s): ZohoCRM.modules.accounts.READ or ZohoCRM.modules.ALL
+          Fetches a list of accounts from zoho crm
         output: ZohoCRMAccount
         sync_type: incremental
         endpoint: /zoho-crm/accounts
@@ -17,9 +15,7 @@ integrations:
         runs: every half hour
         auto_start: false
         description: |
-          Fetches contacts from zoho crm.
-          Details: full sync, doesn't track deletes, metadata is not required.
-          Scope(s): ZohoCRM.modules.contacts.READ or ZohoCRM.modules.ALL
+          Fetches a list of contacts from zoho crm
         output: ZohoCRMContact
         sync_type: incremental
         endpoint: /zoho-crm/contacts
@@ -29,9 +25,7 @@ integrations:
         runs: every half hour
         auto_start: false
         description: |
-          Fetches deals/opportunities from zoho crm.
-          Details: full sync, doesn't track deletes, metadata is not required.
-          Scope(s): ZohoCRM.modules.deals.READ or ZohoCRM.modules.ALL
+          Fetches a list of deals/opportunities from zoho crm
         output: ZohoCRMDeal
         sync_type: incremental
         endpoint: /zoho-crm/deals
