--- a/integration-templates/google-workspace/nango.yaml
+++ b/integration-templates/google-workspace/nango.yaml
@@ -1,24 +1,28 @@
 integrations:
-  google:
+  google-workspace:
     syncs:
       google-workspace-org-unit:
         runs: every 6 hours
         track_deletes: true
         output: OrganizationalUnit
         sync_type: full
-        endpoint: /google/workspace-org-unit
-        scopes: https://www.googleapis.com/auth/admin.directory.orgunit.readonly,https://www.googleapis.com/auth/admin.directory.user.readonly
+        endpoint: /google-workspace/org-unit
+        scopes:
+          - https://www.googleapis.com/auth/admin.directory.orgunit.readonly
+          - https://www.googleapis.com/auth/admin.directory.user.readonly
       google-workspace-users:
         runs: every hour
         output: User
         sync_type: full
-        endpoint: /google/workspace-users
+        endpoint: /google-workspace/users
       google-workspace-user-access-tokens:
         runs: every hour
         output: GoogleWorkspaceUserToken
         sync_type: full
-        endpoint: /google/workspace-user-access-tokens
-        scopes: https://www.googleapis.com/auth/admin.directory.user.readonly,https://www.googleapis.com/auth/admin.directory.user.security
+        endpoint: /google-workspace/user-access-tokens
+        scopes:
+          - https://www.googleapis.com/auth/admin.directory.user.readonly
+          - https://www.googleapis.com/auth/admin.directory.user.security
 models:
   OrganizationalUnit:
     id: string
