--- a/integration-templates/asana/nango.yaml
+++ b/integration-templates/asana/nango.yaml
@@ -4,7 +4,7 @@ integrations:
       asana-tasks:
         runs: every 30min
         description: |
-          Fetches tasks from Asana, retrieving tasks from only the first project of the first workspace
+          Fetches a list of tasks from Asana, retrieving tasks from only the first project of the first workspace
         scopes:
           - default
         output: AsanaTask
