--- a/integration-templates/teamtailor/nango.yaml
+++ b/integration-templates/teamtailor/nango.yaml
@@ -5,10 +5,9 @@ integrations:
         runs: every 6 hours
         description: |
             Fetches a list of all candidates from your teamtailor account.
-            Details: full sync, doesn't track deletes, metadata is not required.
         output: TeamtailorCandidate
         sync_type: full
-        endpoint: /teamtailor-candidates/candidates
+        endpoint: /teamtailor/candidates
         scopes:
           - Admin
 models:
